// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Initial render 1`] = `
<div
  className="trackSlider"
>
  <p
    className="trackSlider__text trackSlider__text--min"
  >
    0:00
  </p>
  <div
    className="trackSlider__range-container"
  >
    <RangeContainer
      defaultValue={
        Array [
          0,
          5224,
        ]
      }
      eventHandlers={
        Object {
          "onAfterRangeChange": [MockFunction],
          "onRangeChange": [MockFunction],
        }
      }
      handleStyle={
        Object {
          "backgroundColor": "#758aa8",
          "border": "1px solid #2c4770",
        }
      }
      label="Transcript"
      max={5224}
      min={0}
      railStyle={
        Object {
          "backgroundColor": "#d3dae3",
        }
      }
      stateAuthority="SCROLL"
      step={1}
      trackStyle={
        Object {
          "backgroundColor": "#758aa8",
        }
      }
      type="VIEW"
      value={
        Array [
          0.75,
          18.119,
        ]
      }
    />
    <RangeContainer
      defaultValue={
        Array [
          0,
          5224,
        ]
      }
      eventHandlers={
        Object {
          "onAfterRangeChange": [MockFunction],
          "onRangeChange": [MockFunction],
        }
      }
      handleStyle={
        Object {
          "backgroundColor": "#758aa8",
          "border": "1px solid #2c4770",
        }
      }
      label="Clip"
      max={5224}
      min={0}
      railStyle={
        Object {
          "backgroundColor": "#d3dae3",
        }
      }
      stateAuthority="SCROLL"
      step={1}
      trackStyle={
        Object {
          "backgroundColor": "#758aa8",
        }
      }
      type="SELECTION"
      value={
        Array [
          0,
          0,
        ]
      }
    />
  </div>
  <p
    className="trackSlider__text trackSlider__text--max"
  >
    1:27:04
  </p>
</div>
`;

exports[`Unzoomed render 1`] = `
<div
  className="trackSlider"
>
  <p
    className="trackSlider__text trackSlider__text--min"
  >
    0:04
  </p>
  <div
    className="trackSlider__range-container"
  >
    <RangeContainer
      defaultValue={
        Array [
          0,
          82,
        ]
      }
      eventHandlers={
        Object {
          "onAfterRangeChange": [MockFunction],
          "onRangeChange": [MockFunction],
        }
      }
      handleStyle={
        Object {
          "backgroundColor": "#758aa8",
          "border": "1px solid #2c4770",
        }
      }
      label="Transcript"
      max={82}
      min={4}
      railStyle={
        Object {
          "backgroundColor": "#d3dae3",
        }
      }
      stateAuthority="SCROLL"
      step={0.1}
      trackStyle={
        Object {
          "backgroundColor": "#758aa8",
        }
      }
      type="VIEW"
      value={
        Array [
          4,
          28.17,
        ]
      }
    />
    <RangeContainer
      defaultValue={
        Array [
          0,
          82,
        ]
      }
      eventHandlers={
        Object {
          "onAfterRangeChange": [MockFunction],
          "onRangeChange": [MockFunction],
        }
      }
      handleStyle={
        Object {
          "backgroundColor": "#758aa8",
          "border": "1px solid #2c4770",
        }
      }
      label="Clip"
      max={82}
      min={4}
      railStyle={
        Object {
          "backgroundColor": "#d3dae3",
        }
      }
      stateAuthority="SCROLL"
      step={0.1}
      trackStyle={
        Object {
          "backgroundColor": "#758aa8",
        }
      }
      type="SELECTION"
      value={
        Array [
          4,
          5.1,
        ]
      }
    />
    <RangeContainer
      defaultValue={
        Array [
          0,
          82,
        ]
      }
      eventHandlers={
        Object {
          "onAfterRangeChange": [MockFunction],
          "onRangeChange": [MockFunction],
        }
      }
      handleStyle={
        Object {
          "backgroundColor": "#758aa8",
          "border": "1px solid #2c4770",
        }
      }
      label="Zoom"
      max={82}
      min={4}
      railStyle={
        Object {
          "backgroundColor": "#d3dae3",
        }
      }
      stateAuthority="SCROLL"
      step={0.1}
      trackStyle={
        Object {
          "backgroundColor": "#758aa8",
        }
      }
      type="ZOOM"
      value={
        Array [
          4,
          82,
        ]
      }
    />
  </div>
  <p
    className="trackSlider__text trackSlider__text--max"
  >
    1:22
  </p>
</div>
`;

exports[`Zoomed render 1`] = `
<div
  className="trackSlider"
>
  <p
    className="trackSlider__text trackSlider__text--min"
  >
    0:04
  </p>
  <div
    className="trackSlider__range-container"
  >
    <RangeContainer
      defaultValue={
        Array [
          0,
          82,
        ]
      }
      eventHandlers={
        Object {
          "onAfterRangeChange": [MockFunction],
          "onRangeChange": [MockFunction],
        }
      }
      handleStyle={
        Object {
          "backgroundColor": "#758aa8",
          "border": "1px solid #2c4770",
        }
      }
      label="Transcript"
      max={82}
      min={4}
      railStyle={
        Object {
          "backgroundColor": "#d3dae3",
        }
      }
      stateAuthority="SCROLL"
      step={0.1}
      trackStyle={
        Object {
          "backgroundColor": "#758aa8",
        }
      }
      type="VIEW"
      value={
        Array [
          4,
          28.17,
        ]
      }
    />
    <RangeContainer
      defaultValue={
        Array [
          0,
          82,
        ]
      }
      eventHandlers={
        Object {
          "onAfterRangeChange": [MockFunction],
          "onRangeChange": [MockFunction],
        }
      }
      handleStyle={
        Object {
          "backgroundColor": "#758aa8",
          "border": "1px solid #2c4770",
        }
      }
      label="Clip"
      max={82}
      min={4}
      railStyle={
        Object {
          "backgroundColor": "#d3dae3",
        }
      }
      stateAuthority="SCROLL"
      step={0.1}
      trackStyle={
        Object {
          "backgroundColor": "#758aa8",
        }
      }
      type="SELECTION"
      value={
        Array [
          4,
          5.1,
        ]
      }
    />
    <RangeContainer
      defaultValue={
        Array [
          0,
          82,
        ]
      }
      eventHandlers={
        Object {
          "onAfterRangeChange": [MockFunction],
          "onRangeChange": [MockFunction],
        }
      }
      handleStyle={
        Object {
          "backgroundColor": "#758aa8",
          "border": "1px solid #2c4770",
        }
      }
      label="Zoom"
      max={82}
      min={4}
      railStyle={
        Object {
          "backgroundColor": "#d3dae3",
        }
      }
      stateAuthority="SCROLL"
      step={0.1}
      trackStyle={
        Object {
          "backgroundColor": "#758aa8",
        }
      }
      type="ZOOM"
      value={
        Array [
          4,
          5.223,
        ]
      }
    />
  </div>
  <p
    className="trackSlider__text trackSlider__text--max"
  >
    1:22
  </p>
</div>
`;
